# cosmic-ctl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  release-please-config.json  schema.json  shell.nix
.github/workflows/: cli_test.yml  release.yml
examples/: config.json  config.ron  config.toml
nix/: package.nix  shell.nix
src/: config.rs  formats.rs  interactive.rs  main.rs  schema.rs  utils.rs
src/commands/: apply.rs  backup.rs  delete.rs  mod.rs  read.rs  reset.rs  write.rs
src/tests/: cli.rs
