[package]
name = "cosmic-ctl"
description = "CLI for COSMIC Desktop configuration management"
version = "1.0.0"
authors = ["Heitor Augusto <IAm.HeitorALN@proton.me>"]
homepage = "https://github.com/HeitorAugustoLN/cosmic-ctl"
repository = "https://github.com/HeitorAugustoLN/cosmic-ctl"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
unescaper = "0.1.5"
