[package]
name = "cosmic-ctl"
description = "CLI for COSMIC Desktop configuration management"
version = "1.0.0"
authors = ["Heitor Augusto <IAm.HeitorALN@proton.me>"]
homepage = "https://github.com/HeitorAugustoLN/cosmic-ctl"
repository = "https://github.com/HeitorAugustoLN/cosmic-ctl"
license = "GPL-3.0-only"
edition = "2021"
keywords = ["cli", "cosmic", "configuration", "management"]
categories = ["command-line-utilities"]
documentation = "https://github.com/HeitorAugustoLN/cosmic-ctl/wiki"
readme = "README.md"

[dependencies]
bracoxide = "0.1.4"
clap = { version = "4.5.21", features = ["derive"] }
etcetera = "0.8.0"
glob = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
unescaper = "0.1.5"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.14.0"
