[package]
name = "cosmic-ctl"
description = "CLI for COSMIC Desktop configuration management"
version = "1.4.0"
authors = ["Heitor Augusto <IAm.HeitorALN@proton.me>"]
homepage = "https://github.com/cosmic-utils/cosmic-ctl"
repository = "https://github.com/cosmic-utils/cosmic-ctl"
license = "GPL-3.0-only"
edition = "2021"
keywords = ["cli", "cosmic", "configuration", "management"]
categories = ["command-line-utilities"]
documentation = "https://github.com/cosmic-utils/cosmic-ctl/wiki"
readme = "README.md"

[dependencies]
atomicwrites = { git = "https://github.com/jackpot51/rust-atomicwrites", version = "0.4.2" }
bracoxide = "0.1.4"
clap = { version = "4.5.21", features = ["derive"] }
etcetera = "0.8.0"
glob = "0.3.1"
inquire = "0.7.5"
ron = "0.10.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
toml = "0.8.20"
unescaper = "0.1.5"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.14.0"
